--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-    <div id="game"></div>
-    <script src="/src/index.js" type="module"></script>   
-    <h1>test</h1>
+    <div id="game">
+        <div class="grid">
+            <!-- <div class="box wrong"></div>
+            <div class="box right"></div>
+            <div class="box"></div>
+            <div class="box">A</div>
+            <div class="box">B</div> -->
+        </div>
+    </div>
+    <script src="src/index.js" type="module"></script>  
+    <!-- <h1>testfail
+    </h1>  -->
 </body>
 </html>
