--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
+    <h1 class="title">Wordle Game 2023</h1>
     <div id="game">
         <div class="grid">
-            <!-- <div class="box wrong"></div>
-            <div class="box right"></div>
-            <div class="box"></div>
-            <div class="box">A</div>
-            <div class="box">B</div> -->
+
         </div>
     </div>
     <script src="src/index.js" type="module"></script>  
