--- a/javascript wordle/src/index.html
+++ b/javascript wordle/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle</title>
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="title">Wordle Game 2023</h1>
@@ -14,8 +14,8 @@
 
         </div>
     </div>
-    <script src="src/index.js" type="module"></script>  
-    <!-- <h1>testfail
-    </h1>  -->
+    <script src="./index.js" type="module"></script>  
 </body>
 </html>
+
+<!-- https://www.youtube.com/watch?v=oKM2nQdQkIU -->
