--- a/javascript wordle/src/index.html
+++ b/javascript wordle/src/index.html
@@ -1,3 +1,5 @@
+<!-- https://www.youtube.com/watch?v=oKM2nQdQkIU -->
+<!-- This project is based on Youtuber "Double D" Project and add feature of make Http requet to check if input word is real word then reveal the word in the gameboard. 2024/01/02-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,4 +20,3 @@
 </body>
 </html>
 
-<!-- https://www.youtube.com/watch?v=oKM2nQdQkIU -->
